// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page/WorkflowTemplate/StepInfo drag to change step card order 1`] = `
<body>
  <div>
    <div
      class="css-1j4pcp2"
    >
      <div
        class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
        >
          <span
            class="honour-icon"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="honour-fill"
              >
                <path
                  d="M12.25 2.33341V10.9207C12.2501 10.9773 12.2337 11.0327 12.2028 11.0801C12.172 11.1275 12.1279 11.165 12.0762 11.1878L7.00001 13.4342L1.92384 11.1884C1.87189 11.1655 1.82776 11.1279 1.79688 11.0802C1.766 11.0325 1.74971 10.9769 1.75001 10.9201V2.33341H0.583344V1.16675H13.4167V2.33341H12.25ZM4.66668 7.00008V8.16675H9.33334V7.00008H4.66668ZM4.66668 4.66675V5.83341H9.33334V4.66675H4.66668Z"
                  fill="white"
                  id="Vector"
                />
              </g>
            </svg>
          </span>
        </div>
        <div
          class="ant-col step-box css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-card ant-card-bordered step-card-style disable-step-card css-18lc8oi css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-card-body"
              >
                <span
                  class="step-card-title"
                >
                  允许创建工单的最高审核等级
                </span>
                <div
                  class="step-card-desc"
                >
                  <div
                    class="css-ao34mv"
                  >
                    <span
                      class="level-step-desc"
                    >
                      最高等级
                    </span>
                    <span
                      style="color: rgb(235, 173, 28);"
                    >
                      告警(Warning)
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
        >
          <span
            class="add-file-icon"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="file-add-fill"
              >
                <path
                  d="M9.33333 1.16666L12.25 4.08332V12.2547C12.2498 12.4082 12.1887 12.5554 12.0801 12.6639C11.9715 12.7724 11.8243 12.8333 11.6707 12.8333H2.32925C2.17605 12.8323 2.02943 12.771 1.92104 12.6627C1.81266 12.5544 1.75122 12.4079 1.75 12.2547V1.74532C1.75 1.42566 2.00958 1.16666 2.32925 1.16666H9.33333ZM6.41667 6.41666H4.66667V7.58332H6.41667V9.33332H7.58333V7.58332H9.33333V6.41666H7.58333V4.66666H6.41667V6.41666Z"
                  fill="white"
                  id="Vector"
                />
              </g>
            </svg>
          </span>
        </div>
        <div
          class="ant-col step-box css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-card ant-card-bordered step-card-style disable-step-card css-18lc8oi css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-card-body"
              >
                <span
                  class="step-card-title"
                >
                  工单发起/工单更新SQL语句
                </span>
                <div
                  class="step-card-desc"
                >
                  工单被创建，或者工单被驳回后等待修改SQL语句
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-1"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space css-dev-only-do-not-override-txh9fw"
        data-testid="review-step-0"
        role="button"
        style="cursor: move;"
        tabindex="0"
      >
        <div
          class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
        >
          <span
            class="audit-icon"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="audit-fill"
              >
                <g
                  id="Vector"
                >
                  <path
                    d="M8.16667 5.83334C8.16667 5.27914 8.49673 4.7902 8.83836 4.35381C9.14847 3.95768 9.33333 3.45877 9.33333 2.91668C9.33333 1.62801 8.28866 0.583344 7 0.583344C5.71134 0.583344 4.66667 1.62801 4.66667 2.91668C4.66667 3.45877 4.85153 3.95768 5.16164 4.35381C5.50327 4.7902 5.83333 5.27914 5.83333 5.83334H2.91667C2.27233 5.83334 1.75 6.35568 1.75 7.00001V9.33334C1.75 9.65551 2.01117 9.91668 2.33333 9.91668H11.6667C11.9888 9.91668 12.25 9.65551 12.25 9.33334V7.00001C12.25 6.35568 11.7277 5.83334 11.0833 5.83334H8.16667Z"
                    fill="white"
                  />
                  <path
                    d="M12.25 12.25V11.0833H1.75V12.25H12.25Z"
                    fill="white"
                  />
                </g>
              </g>
            </svg>
          </span>
        </div>
        <div
          class="ant-col step-box css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-card ant-card-bordered step-card-style disable-step-card css-18lc8oi css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-card-body"
              >
                <span
                  class="step-card-title"
                >
                  审核节点
                  <span
                    class="review-index-text"
                  >
                    #1
                  </span>
                </span>
                <div
                  class="step-card-desc"
                >
                  -
                </div>
                <div
                  class="step-card-operator"
                >
                  <div
                    class="operator-title"
                  >
                    审核人
                  </div>
                  <div
                    class="operator-content"
                  >
                    <svg
                      fill="none"
                      height="18"
                      viewBox="0 0 18 18"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        id="account-circle-fill"
                      >
                        <path
                          d="M9 1.5C13.14 1.5 16.5 4.86 16.5 9C16.5 13.14 13.14 16.5 9 16.5C4.86 16.5 1.5 13.14 1.5 9C1.5 4.86 4.86 1.5 9 1.5ZM4.51725 11.562C5.61825 13.2045 7.27125 14.25 9.12 14.25C10.968 14.25 12.6217 13.2052 13.722 11.562C12.4738 10.3954 10.8285 9.74761 9.12 9.75C7.41128 9.74742 5.76563 10.3953 4.51725 11.562ZM9 8.25C9.59674 8.25 10.169 8.01295 10.591 7.59099C11.0129 7.16903 11.25 6.59674 11.25 6C11.25 5.40326 11.0129 4.83097 10.591 4.40901C10.169 3.98705 9.59674 3.75 9 3.75C8.40326 3.75 7.83097 3.98705 7.40901 4.40901C6.98705 4.83097 6.75 5.40326 6.75 6C6.75 6.59674 6.98705 7.16903 7.40901 7.59099C7.83097 8.01295 8.40326 8.25 9 8.25Z"
                          fill="#1CB889"
                          id="Vector"
                        />
                      </g>
                    </svg>
                    <span
                      class="review-exec-auth-text"
                    >
                      匹配拥有数据源审核权限的成员
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-1"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space css-dev-only-do-not-override-txh9fw"
        data-testid="review-step-1"
        role="button"
        style="cursor: move;"
        tabindex="0"
      >
        <div
          class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
        >
          <span
            class="audit-icon"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="audit-fill"
              >
                <g
                  id="Vector"
                >
                  <path
                    d="M8.16667 5.83334C8.16667 5.27914 8.49673 4.7902 8.83836 4.35381C9.14847 3.95768 9.33333 3.45877 9.33333 2.91668C9.33333 1.62801 8.28866 0.583344 7 0.583344C5.71134 0.583344 4.66667 1.62801 4.66667 2.91668C4.66667 3.45877 4.85153 3.95768 5.16164 4.35381C5.50327 4.7902 5.83333 5.27914 5.83333 5.83334H2.91667C2.27233 5.83334 1.75 6.35568 1.75 7.00001V9.33334C1.75 9.65551 2.01117 9.91668 2.33333 9.91668H11.6667C11.9888 9.91668 12.25 9.65551 12.25 9.33334V7.00001C12.25 6.35568 11.7277 5.83334 11.0833 5.83334H8.16667Z"
                    fill="white"
                  />
                  <path
                    d="M12.25 12.25V11.0833H1.75V12.25H12.25Z"
                    fill="white"
                  />
                </g>
              </g>
            </svg>
          </span>
        </div>
        <div
          class="ant-col step-box css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-card ant-card-bordered ant-card-hoverable step-card-style  css-18lc8oi css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-card-body"
              >
                <span
                  class="step-card-title"
                >
                  审核节点
                  <span
                    class="review-index-text"
                  >
                    #2
                  </span>
                </span>
                <div
                  class="step-card-desc"
                >
                  step desc
                </div>
                <div
                  class="step-card-operator"
                >
                  <div
                    class="operator-title"
                  >
                    审核人
                  </div>
                  <div
                    class="operator-content"
                  >
                    <div
                      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center work-flow-auth-avatar-wrapper basic-tooltips-wrapper css-4jbtl9"
                    >
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="ant-avatar ant-avatar-sm ant-avatar-circle work-flow-auth-avatar css-7njbce css-dev-only-do-not-override-txh9fw"
                        >
                          <span
                            class="ant-avatar-string"
                            style="transform: scale(1) translateX(-50%);"
                          >
                            T
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <button
                  class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-circle ant-btn-default ant-btn-sm ant-btn-icon-only basic-button-wrapper css-1kuwm0s"
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="close"
                      class="anticon anticon-close"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row add-review-node-icon workflow-step-container css-dev-only-do-not-override-txh9fw"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-dashed basic-button-wrapper css-1o7grex"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="plus"
              class="anticon anticon-plus"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="plus"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <defs>
                  <style />
                </defs>
                <path
                  d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
                />
                <path
                  d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
                />
              </svg>
            </span>
          </span>
          <span>
            添加审核节点
          </span>
        </button>
      </div>
      <div
        class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
        >
          <span
            class="send-plane-icon"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="send-plane-fill"
              >
                <path
                  d="M1.13517 5.43373C0.830674 5.33223 0.827757 5.16832 1.14101 5.0639L12.2751 1.35273C12.5837 1.25007 12.7604 1.42273 12.6741 1.7249L9.49259 12.8584C9.40509 13.167 9.22717 13.1775 9.09651 12.8846L7.00001 8.16665L10.5 3.49998L5.83334 6.99998L1.13517 5.43373Z"
                  fill="white"
                  id="Vector"
                />
              </g>
            </svg>
          </span>
        </div>
        <div
          class="ant-col step-box css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-card ant-card-bordered step-card-style disable-step-card css-18lc8oi css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-card-body"
              >
                <span
                  class="step-card-title"
                >
                  执行上线
                </span>
                <div
                  class="step-card-desc"
                >
                  -
                </div>
                <div
                  class="step-card-operator"
                >
                  <div
                    class="operator-title"
                  >
                    执行人
                  </div>
                  <div
                    class="operator-content"
                  >
                    <svg
                      fill="none"
                      height="18"
                      viewBox="0 0 18 18"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        id="account-circle-fill"
                      >
                        <path
                          d="M9 1.5C13.14 1.5 16.5 4.86 16.5 9C16.5 13.14 13.14 16.5 9 16.5C4.86 16.5 1.5 13.14 1.5 9C1.5 4.86 4.86 1.5 9 1.5ZM4.51725 11.562C5.61825 13.2045 7.27125 14.25 9.12 14.25C10.968 14.25 12.6217 13.2052 13.722 11.562C12.4738 10.3954 10.8285 9.74761 9.12 9.75C7.41128 9.74742 5.76563 10.3953 4.51725 11.562ZM9 8.25C9.59674 8.25 10.169 8.01295 10.591 7.59099C11.0129 7.16903 11.25 6.59674 11.25 6C11.25 5.40326 11.0129 4.83097 10.591 4.40901C10.169 3.98705 9.59674 3.75 9 3.75C8.40326 3.75 7.83097 3.98705 7.40901 4.40901C6.98705 4.83097 6.75 5.40326 6.75 6C6.75 6.59674 6.98705 7.16903 7.40901 7.59099C7.83097 8.01295 8.40326 8.25 9 8.25Z"
                          fill="#1CB889"
                          id="Vector"
                        />
                      </g>
                    </svg>
                    <span
                      class="review-exec-auth-text"
                    >
                      匹配拥有数据源上线权限的成员
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="DndDescribedBy-1"
      style="display: none;"
    >
      
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="DndLiveRegion-1"
      role="status"
      style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
    />
  </div>
</body>
`;

exports[`page/WorkflowTemplate/StepInfo render step info and change review node number 1`] = `
<body>
  <div>
    <div
      class="css-1j4pcp2"
    >
      <div
        class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
        >
          <span
            class="honour-icon"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="honour-fill"
              >
                <path
                  d="M12.25 2.33341V10.9207C12.2501 10.9773 12.2337 11.0327 12.2028 11.0801C12.172 11.1275 12.1279 11.165 12.0762 11.1878L7.00001 13.4342L1.92384 11.1884C1.87189 11.1655 1.82776 11.1279 1.79688 11.0802C1.766 11.0325 1.74971 10.9769 1.75001 10.9201V2.33341H0.583344V1.16675H13.4167V2.33341H12.25ZM4.66668 7.00008V8.16675H9.33334V7.00008H4.66668ZM4.66668 4.66675V5.83341H9.33334V4.66675H4.66668Z"
                  fill="white"
                  id="Vector"
                />
              </g>
            </svg>
          </span>
        </div>
        <div
          class="ant-col step-box css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-card ant-card-bordered step-card-style disable-step-card css-18lc8oi css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-card-body"
              >
                <span
                  class="step-card-title"
                >
                  允许创建工单的最高审核等级
                </span>
                <div
                  class="step-card-desc"
                >
                  <div
                    class="css-ao34mv"
                  >
                    <span
                      class="level-step-desc"
                    >
                      最高等级
                    </span>
                    <span
                      style="color: rgb(235, 173, 28);"
                    >
                      告警(Warning)
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
        >
          <span
            class="add-file-icon"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="file-add-fill"
              >
                <path
                  d="M9.33333 1.16666L12.25 4.08332V12.2547C12.2498 12.4082 12.1887 12.5554 12.0801 12.6639C11.9715 12.7724 11.8243 12.8333 11.6707 12.8333H2.32925C2.17605 12.8323 2.02943 12.771 1.92104 12.6627C1.81266 12.5544 1.75122 12.4079 1.75 12.2547V1.74532C1.75 1.42566 2.00958 1.16666 2.32925 1.16666H9.33333ZM6.41667 6.41666H4.66667V7.58332H6.41667V9.33332H7.58333V7.58332H9.33333V6.41666H7.58333V4.66666H6.41667V6.41666Z"
                  fill="white"
                  id="Vector"
                />
              </g>
            </svg>
          </span>
        </div>
        <div
          class="ant-col step-box css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-card ant-card-bordered step-card-style disable-step-card css-18lc8oi css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-card-body"
              >
                <span
                  class="step-card-title"
                >
                  工单发起/工单更新SQL语句
                </span>
                <div
                  class="step-card-desc"
                >
                  工单被创建，或者工单被驳回后等待修改SQL语句
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-0"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space css-dev-only-do-not-override-txh9fw"
        data-testid="review-step-0"
        role="button"
        style="cursor: move;"
        tabindex="0"
      >
        <div
          class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
        >
          <span
            class="audit-icon"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="audit-fill"
              >
                <g
                  id="Vector"
                >
                  <path
                    d="M8.16667 5.83334C8.16667 5.27914 8.49673 4.7902 8.83836 4.35381C9.14847 3.95768 9.33333 3.45877 9.33333 2.91668C9.33333 1.62801 8.28866 0.583344 7 0.583344C5.71134 0.583344 4.66667 1.62801 4.66667 2.91668C4.66667 3.45877 4.85153 3.95768 5.16164 4.35381C5.50327 4.7902 5.83333 5.27914 5.83333 5.83334H2.91667C2.27233 5.83334 1.75 6.35568 1.75 7.00001V9.33334C1.75 9.65551 2.01117 9.91668 2.33333 9.91668H11.6667C11.9888 9.91668 12.25 9.65551 12.25 9.33334V7.00001C12.25 6.35568 11.7277 5.83334 11.0833 5.83334H8.16667Z"
                    fill="white"
                  />
                  <path
                    d="M12.25 12.25V11.0833H1.75V12.25H12.25Z"
                    fill="white"
                  />
                </g>
              </g>
            </svg>
          </span>
        </div>
        <div
          class="ant-col step-box css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-card ant-card-bordered step-card-style disable-step-card css-18lc8oi css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-card-body"
              >
                <span
                  class="step-card-title"
                >
                  审核节点
                  <span
                    class="review-index-text"
                  >
                    #1
                  </span>
                </span>
                <div
                  class="step-card-desc"
                >
                  -
                </div>
                <div
                  class="step-card-operator"
                >
                  <div
                    class="operator-title"
                  >
                    审核人
                  </div>
                  <div
                    class="operator-content"
                  >
                    <svg
                      fill="none"
                      height="18"
                      viewBox="0 0 18 18"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        id="account-circle-fill"
                      >
                        <path
                          d="M9 1.5C13.14 1.5 16.5 4.86 16.5 9C16.5 13.14 13.14 16.5 9 16.5C4.86 16.5 1.5 13.14 1.5 9C1.5 4.86 4.86 1.5 9 1.5ZM4.51725 11.562C5.61825 13.2045 7.27125 14.25 9.12 14.25C10.968 14.25 12.6217 13.2052 13.722 11.562C12.4738 10.3954 10.8285 9.74761 9.12 9.75C7.41128 9.74742 5.76563 10.3953 4.51725 11.562ZM9 8.25C9.59674 8.25 10.169 8.01295 10.591 7.59099C11.0129 7.16903 11.25 6.59674 11.25 6C11.25 5.40326 11.0129 4.83097 10.591 4.40901C10.169 3.98705 9.59674 3.75 9 3.75C8.40326 3.75 7.83097 3.98705 7.40901 4.40901C6.98705 4.83097 6.75 5.40326 6.75 6C6.75 6.59674 6.98705 7.16903 7.40901 7.59099C7.83097 8.01295 8.40326 8.25 9 8.25Z"
                          fill="#1CB889"
                          id="Vector"
                        />
                      </g>
                    </svg>
                    <span
                      class="review-exec-auth-text"
                    >
                      匹配拥有数据源审核权限的成员
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-0"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space css-dev-only-do-not-override-txh9fw"
        data-testid="review-step-1"
        role="button"
        style="cursor: move;"
        tabindex="0"
      >
        <div
          class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
        >
          <span
            class="audit-icon"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="audit-fill"
              >
                <g
                  id="Vector"
                >
                  <path
                    d="M8.16667 5.83334C8.16667 5.27914 8.49673 4.7902 8.83836 4.35381C9.14847 3.95768 9.33333 3.45877 9.33333 2.91668C9.33333 1.62801 8.28866 0.583344 7 0.583344C5.71134 0.583344 4.66667 1.62801 4.66667 2.91668C4.66667 3.45877 4.85153 3.95768 5.16164 4.35381C5.50327 4.7902 5.83333 5.27914 5.83333 5.83334H2.91667C2.27233 5.83334 1.75 6.35568 1.75 7.00001V9.33334C1.75 9.65551 2.01117 9.91668 2.33333 9.91668H11.6667C11.9888 9.91668 12.25 9.65551 12.25 9.33334V7.00001C12.25 6.35568 11.7277 5.83334 11.0833 5.83334H8.16667Z"
                    fill="white"
                  />
                  <path
                    d="M12.25 12.25V11.0833H1.75V12.25H12.25Z"
                    fill="white"
                  />
                </g>
              </g>
            </svg>
          </span>
        </div>
        <div
          class="ant-col step-box css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-card ant-card-bordered ant-card-hoverable step-card-style  css-18lc8oi css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-card-body"
              >
                <span
                  class="step-card-title"
                >
                  审核节点
                  <span
                    class="review-index-text"
                  >
                    #2
                  </span>
                </span>
                <div
                  class="step-card-desc"
                >
                  step desc
                </div>
                <div
                  class="step-card-operator"
                >
                  <div
                    class="operator-title"
                  >
                    审核人
                  </div>
                  <div
                    class="operator-content"
                  >
                    <div
                      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center work-flow-auth-avatar-wrapper basic-tooltips-wrapper css-4jbtl9"
                    >
                      <div
                        class="ant-space-item"
                      >
                        <span
                          class="ant-avatar ant-avatar-sm ant-avatar-circle work-flow-auth-avatar css-7njbce css-dev-only-do-not-override-txh9fw"
                        >
                          <span
                            class="ant-avatar-string"
                            style="transform: scale(1) translateX(-50%);"
                          >
                            T
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <button
                  class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-circle ant-btn-default ant-btn-sm ant-btn-icon-only basic-button-wrapper css-1kuwm0s"
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="close"
                      class="anticon anticon-close"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row add-review-node-icon workflow-step-container css-dev-only-do-not-override-txh9fw"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-dashed basic-button-wrapper css-1o7grex"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="plus"
              class="anticon anticon-plus"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="plus"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <defs>
                  <style />
                </defs>
                <path
                  d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
                />
                <path
                  d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
                />
              </svg>
            </span>
          </span>
          <span>
            添加审核节点
          </span>
        </button>
      </div>
      <div
        class="ant-row ant-row-no-wrap workflow-step-container workflow-card-space css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-col icon-wrapper css-dev-only-do-not-override-txh9fw"
        >
          <span
            class="send-plane-icon"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="send-plane-fill"
              >
                <path
                  d="M1.13517 5.43373C0.830674 5.33223 0.827757 5.16832 1.14101 5.0639L12.2751 1.35273C12.5837 1.25007 12.7604 1.42273 12.6741 1.7249L9.49259 12.8584C9.40509 13.167 9.22717 13.1775 9.09651 12.8846L7.00001 8.16665L10.5 3.49998L5.83334 6.99998L1.13517 5.43373Z"
                  fill="white"
                  id="Vector"
                />
              </g>
            </svg>
          </span>
        </div>
        <div
          class="ant-col step-box css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-card ant-card-bordered step-card-style disable-step-card css-18lc8oi css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-card-body"
              >
                <span
                  class="step-card-title"
                >
                  执行上线
                </span>
                <div
                  class="step-card-desc"
                >
                  -
                </div>
                <div
                  class="step-card-operator"
                >
                  <div
                    class="operator-title"
                  >
                    执行人
                  </div>
                  <div
                    class="operator-content"
                  >
                    <svg
                      fill="none"
                      height="18"
                      viewBox="0 0 18 18"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        id="account-circle-fill"
                      >
                        <path
                          d="M9 1.5C13.14 1.5 16.5 4.86 16.5 9C16.5 13.14 13.14 16.5 9 16.5C4.86 16.5 1.5 13.14 1.5 9C1.5 4.86 4.86 1.5 9 1.5ZM4.51725 11.562C5.61825 13.2045 7.27125 14.25 9.12 14.25C10.968 14.25 12.6217 13.2052 13.722 11.562C12.4738 10.3954 10.8285 9.74761 9.12 9.75C7.41128 9.74742 5.76563 10.3953 4.51725 11.562ZM9 8.25C9.59674 8.25 10.169 8.01295 10.591 7.59099C11.0129 7.16903 11.25 6.59674 11.25 6C11.25 5.40326 11.0129 4.83097 10.591 4.40901C10.169 3.98705 9.59674 3.75 9 3.75C8.40326 3.75 7.83097 3.98705 7.40901 4.40901C6.98705 4.83097 6.75 5.40326 6.75 6C6.75 6.59674 6.98705 7.16903 7.40901 7.59099C7.83097 8.01295 8.40326 8.25 9 8.25Z"
                          fill="#1CB889"
                          id="Vector"
                        />
                      </g>
                    </svg>
                    <span
                      class="review-exec-auth-text"
                    >
                      匹配拥有数据源上线权限的成员
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="DndDescribedBy-0"
      style="display: none;"
    >
      
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="DndLiveRegion-0"
      role="status"
      style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
    />
  </div>
</body>
`;
